Actual fix for suggestions clipping

--- a/src/SIL.XForge.Scripture/ClientApp/src/app/translate/editor/suggestions.component.scss
+++ b/src/SIL.XForge.Scripture/ClientApp/src/app/translate/editor/suggestions.component.scss
@@ -52,7 +52,7 @@ mat-list-option {
   --mdc-list-list-item-selected-container-color: rgba(0, 0, 0, 0.12);
 }
 
-::ng-deep .mdc-list-item__content {
+:host ::ng-deep .mdc-list-item__content {
   overflow: visible;
 }
 
